now open and send html file works with the right path

--- a/simplified-serv/Makefile
+++ b/simplified-serv/Makefile
@@ -66,6 +66,9 @@ fclean: clean
 	echo "No Executable to remove from webserv."; \
 	fi;
 
+e:	$(NAME)
+	./$(NAME)
+
 ### re Rule ###
 re: fclean all
 
