--- a/simplified-serv/Makefile
+++ b/simplified-serv/Makefile
@@ -17,6 +17,7 @@ RESET		=	\033[0m
 GREEN		=	\033[32m
 YELLOW		=	\033[33m
 BLUE		=	\033[34m
+BOLDBLUE    =	\033[1m\033[34m
 RED			=	\033[31m
 MAGENTA		=	\033[35m
 CYAN		=	\033[36m
