added location savement to config parsing

--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -6,14 +6,14 @@
  allowed_Methods GET DELETE POST;
 
  server{
-    listen	80;
+    listen	8800 9834 98245;
     server_name  domain1.com www.domain1.com;access_log   logs/domain1.access.log  main;
     
-    root         html;
+    root        		 html;
 	   
-	    location ~  {
-      root    /var/www/virtual/big.server.com/htdocs;
-      expires 30d;
+	    location  ~ {
+      root    /var/www/virtual/big.server.com/htdocs undso;
+      expires 30d 20d 40;
     }
 				 allowed_Methods GET DELETE POST;
     # pass requests for dynamic content to rails/turbogears/zope, et al
