--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -1,6 +1,9 @@
 ! webserve config file !
 
-	
+#	bruder{
+#		location / {}
+#	}
+#	schwester{}
 
 
  allowed_Methods GET DELETE POST;
@@ -10,7 +13,12 @@
     server_name  domain1.com www.domain1.com;access_log   logs/domain1.access.log  main;
     
     root        		 html;
-	   
+	   #location {}#location empty zurück geben
+	   #location {#location empty zurück geben
+		#;}
+	   #location {
+		#hallo;} #location with key but without value zurück geben
+
 	    location  ~ {
       root    /var/www/virtual/big.server.com/htdocs undso;
       expires 30d 20d 40;
@@ -19,6 +27,8 @@
     # pass requests for dynamic content to rails/turbogears/zope, et al
     location / {
       proxy_pass      http://127.0.0.1:8080;
+	  server_name  domain1.com www.domain1.com;
+    access_log   logs/domain1.access.log  main;
     }
 	 allowed_Methods GET DELETE POST;}
 
