config is correctly saved

--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -1,61 +1,54 @@
 ! webserve config file !
 
-#	bruder{
-#		location / {}
-#	}
-#	schwester{}
+allowed_Methods GET POST;
 
+server
+{
+    listen1			8800 9834 98245;
+    server_name1 	domain1.com www.domain1.com;
+	access_log1		logs/domain1.access.log  main;
+    root1			html;
 
- allowed_Methods GET DELETE POST;
-
- server{
-    listen	8800 9834 98245;
-    server_name  domain1.com www.domain1.com;access_log   logs/domain1.access.log  main;
-    
-    root        		 html;
-	   #location {}#location empty zurück geben
-	   #location {#location empty zurück geben
-		#;}
-	   #location {
-		#hallo;} #location with key but without value zurück geben
-
-	    location  ~ {
-      root    /var/www/virtual/big.server.com/htdocs undso;
-      expires 30d 20d 40;
+	location  ~ 
+	{
+      root2    	/var/www/virtual/big.server.com/htdocs undso;
+      expires 	30d 20d 40;
     }
-				 allowed_Methods GET DELETE POST;
-    # pass requests for dynamic content to rails/turbogears/zope, et al
-    location / {
-      proxy_pass      http://127.0.0.1:8080;
-	  server_name  domain1.com www.domain1.com;
-    access_log   logs/domain1.access.log  main;
+	location lj/ 
+	{
+    	Name      Max;
     }
-	 allowed_Methods GET DELETE POST;}
+	
+	allowed_Methods2 GET DELETE POST;
 
-
-
-
-
-									;Fehler_oder_einfach_nicht_drauf_achten		
-
-  server {
-    listen	80;
-    server_name  domain1.com www.domain1.com;
-    access_log   logs/domain1.access.log  main;
-    root         html;
-	   
-	    location ~{
-      root    /var/www/virtual/big.server.com/htdocs;
-      expires 30d;
-    }
-
-    # pass requests for dynamic content to rails/turbogears/zope, et al
     location / 
+	{
+    	proxy_pass      http://127.0.0.1:8080;
+		server_name2  	domain1.com www.domain1.com;
+    	access_log2   	logs/domain1.access.log  main;
+    }
+
+	 allowed_Methods3 GET DELETE POST;
+}
+
+server
+{
+    listen2	80;
+    server_name3  domain1.com www.domain1.com;
+    access_log3   logs/domain1.access.log  main;
+    root3         html;
+	   
+	location ~/
+	{
+      root4    	/var/www/virtual/big.server.com/htdocs;
+      expires 	30d;
+    }
+
+    location _/ 
 	{
       proxy_pass      http://127.0.0.1:8080;
     }
  }
  
-
- allowed_Methods GET DELETE POST;
+allowed_Methods GET DELETE;
 
