--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -4,7 +4,7 @@ allowed_Methods GET POST;
 
 server
 {
-    listen1			8800 9834 98245;
+    listen1\		8800 9834 98245;
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main;
     root1			html;
