--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -1,10 +1,12 @@
 ! webserve config file !
 
 allowed_Methods GET POST;
+listen 49;
+root1			html htm;
 
 server
 {
-    listen1\		8800 9834 98245;
+    listen	8800 9834 98245;
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main;
     root1			html;
