--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -2,18 +2,18 @@
 
 allowed_Methods GET POST;
 listen 49;
-root1			html htm;
+root1		 htm;
 
 server
 {
-    listen	8800 9834 98245;
+    listen	8800 ;
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main;
     root1			html;
 
 	location  ~ 
 	{
-      root2    	/var/www/virtual/big.server.com/htdocs undso;
+      root2    	/var/www/virtual/big.server.com/htdocs;
       expires 	30d 20d 40;
     }
 	location lj/ 
@@ -27,7 +27,7 @@ server
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
-    	access_log2   	logs/domain1.access.log  main;
+    	Root1   	logs/domain1.access.log  main;
     }
 
 	 allowed_Methods3 GET DELETE POST;
@@ -35,7 +35,7 @@ server
 
 server
 {
-    listen2	80;
+    listen	80 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
     root3         html;
