--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -1,15 +1,16 @@
 ! webserve config file !
 
-allowed_Methods2 GET POST USdfg jksdhf kajshd;
+allowed_Methods GET POST Delete;
 listen 49;
 root1		 htm;
+root2		 htm_;
 
 server
 {
     listen	8800;
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main;
-    root1			html;
+	allowed_Methods  POST GET;
 
 	location  ~ 
 	{
@@ -21,22 +22,17 @@ server
 	{
     	Name      Max;
     }
-	
-	allowed_Methods2 GET DELETE POST;
-
     location / 
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
     	Root1   	logs/domain1.access.log;
     }
-
-	 allowed_Methods3 GET DELETE POST;
 }
 
 server
 {
-    listen	80 ;
+    #listen	80 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
     root3         html;
@@ -52,6 +48,4 @@ server
       proxy_pass      http://127.0.0.1:8080;
     }
  }
- 
-allowed_Methods GET DELETE;
 
