--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -9,7 +9,7 @@ server
 {
     listen	8800;
     server_name1 	domain1.com www.domain1.com;
-	access_log1		logs/domain1.access.log  main;
+	access_log1		logs/domain1.access.log  main jksdhf;
 	allowed_Methods  POST GET;
 
 	location  ~ 
@@ -22,7 +22,7 @@ server
 	{
     	Name      Max;
     }
-    location / 
+	location / 
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
