config get and size for location wrote and tested

--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -4,6 +4,7 @@ allowed_Methods GET POST Delete;
 listen 49;
 root1		 htm;
 root2		 htm_;
+root4 du;
 
 server
 {
@@ -11,10 +12,11 @@ server
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main jksdhf;
 	allowed_Methods  POST GET;
+	#root4 max;
 
 	location  ~ 
 	{
-      root2    	/var/www/virtual/big.server.com/htdocs;
+      root3    	/var/www/virtual/big.server.com/htdocs df dfigj sdlkfj;
       expires 	30d 20d 40;
 	  listen 39;
     }
@@ -22,11 +24,11 @@ server
 	{
     	Name      Max;
     }
-	location / 
+	location ~/ 
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
-    	Root1   	logs/domain1.access.log;
+    	root3   	logs/domain1.access.log;
     }
 }
 
@@ -35,11 +37,11 @@ server
     #listen	80 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
-    root3         html;
+    #root4         html_max;
 	   
 	location ~/
 	{
-      root4    	/var/www/virtual/big.server.com/htdocs;
+      root3    	/var/www/virtual/big.server.com/htdocs do dkfjhg skdfhgkjshdf kg sdkfjhg;
       expires 	30d;
     }
 
