--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -1,21 +1,16 @@
 ! webserve config file !
 
-allowed_Methods GET POST;
-listen 49;
-root1		 htm;
+index		index.html index.htm;
+error404	error.html;
 
 server
 {
-    listen 897;
-    server_name1 	domain1.com www.domain1.com;
-	access_log1		logs/domain1.access.log  main;
-    root1			html;
+    listen 8000;
+	allowed_Methods GET DELETE POST;
 
 	location  ~ 
 	{
-      root2    	/var/www/virtual/big.server.com/htdocs;
-      expires 	30d 20d 40;
-	  listen 39;
+		allowed_Methods GET;
     }
 	location lj/ 
 	{
