; after parameter and values is mandatory before line break - implemented in config parsing

--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -6,16 +6,16 @@ root1		 htm;
 root2		 htm_;
 root4 du;
 
+
 server
 {
     listen	8800;
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main jksdhf;
 	allowed_Methods  POST GET;
-	#root4 max;
+	#root4 max
 
-	location  ~ 
-	{
+	location  ~ {
       root3    	/var/www/virtual/big.server.com/htdocs df dfigj sdlkfj;
       expires 	30d 20d 40;
 	  listen 39;
