use config in responsemessage

--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -1,6 +1,6 @@
 ! webserve config file !
 
-allowed_Methods GET POST Delete;
+allowed_Methods GET POST DELETE;
 listen 49;
 root1		 htm;
 root2		 htm_;
