--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -1,7 +1,9 @@
 ! webserve config file !
 
-index		index.html index.htm;
+index		index.htm index.html;
 error404	error.html;
+
+
 server
 {
     listen 8000;
