--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -13,6 +13,9 @@ server
     server_name1 	domain1.com www.domain1.com;
 	access_log1		logs/domain1.access.log  main jksdhf;
 	allowed_Methods  POST GET;
+	index		index.htm index.html;
+	error404	error.html;
+
 	#root4 max
 
 	location  ~ {
