--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -18,7 +18,7 @@ server
 
 	#root4 max
 
-	location  ~ {
+	location  /subdi {
       root3    	/var/www/virtual/big.server.com/htdocs df dfigj sdlkfj;
       expires 	30d 20d 40;
 	  listen 39;
@@ -27,7 +27,7 @@ server
 	{
     	Name      Max;
     }
-	location ~/ 
+	location /
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
