--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -24,7 +24,7 @@ server
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
-    	Root1   	logs/domain1.access.log;
+    	root   	/www;
     }
 
 	 allowed_Methods3 GET DELETE POST;
