--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -31,7 +31,7 @@ server
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
-    	root3   	logs/domain1.access.log;
+    	root   	www;
     }
 }
 
