--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -1,7 +1,8 @@
 ! webserve config file !
 
-index		index.htm index.html;
+#index		index.htm index.html;
 error404	error.html;
+root /www;
 
 
 server
@@ -13,9 +14,9 @@ server
 	{
 		allowed_Methods GET;
     }
-	location lj/ 
+	location /subdir 
 	{
-    	Name      Max;
+    	index	error2.html;
     }
 	
 	allowed_Methods2 GET DELETE POST;
