--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -1,6 +1,6 @@
 ! webserve config file !
 
-#index		index.htm index.html;
+index		index.htm index.html;
 error404	error.html;
 root /www;
 
@@ -10,13 +10,14 @@ server
     listen 8000;
 	allowed_Methods GET DELETE POST;
 
-	location  ~ 
+	location  /one 
 	{
 		allowed_Methods GET;
+		return /subdir;
     }
 	location /subdir 
 	{
-    	index	error2.html;
+		return /;
     }
 	
 	allowed_Methods2 GET DELETE POST;
