--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -22,7 +22,7 @@ server
 	
 	allowed_Methods2 GET DELETE POST;
 
-    location / 
+    location /zu
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
