--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -37,7 +37,7 @@ server
 
 server
 {
-    #listen	80 ;
+    listen	80 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
     #root4         html_max;
@@ -52,5 +52,6 @@ server
 	{
       proxy_pass      http://127.0.0.1:8080;
     }
+	listen: 93847h;
  }
 
