little improvement in std::stringConfig::get( size_t server, std::string location, std::string parameter, size_t n )

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -9,6 +9,8 @@ server
 {
     listen 8000;
 	allowed_Methods GET DELETE POST;
+	return /; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
+
 
 	location  /one 
 	{
