irgendwas in responsemessage

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -2,15 +2,15 @@
 
 index		index.htm index.html;
 error404	error.html;
-root www;
+root /www;
 
 
 server
 {
     listen 8000;
 	allowed_Methods GET DELETE POST;
-	return /; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
-
+	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
+	root /;
 
 	location  /one 
 	{
@@ -30,6 +30,11 @@ server
 		server_name2  	domain1.com www.domain1.com;
     	root   	/www;
     }
+
+	location /kapouet
+	{
+		return /www/subdir;
+	}
 
 	 allowed_Methods3 GET DELETE POST;
 }
