--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -10,14 +10,15 @@ server
     listen 8000;
 	allowed_Methods GET DELETE POST;
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
-	root /;
+	root /www;
+	
 
 	location  /one 
 	{
 		allowed_Methods GET;
 		return /subdir;
     }
-	location /subdir 
+	location /subdir
 	{
 		return /;
     }
@@ -29,11 +30,13 @@ server
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
     	root   	/www;
+		error404 error/error.html;
+		index sub/hallo.html;
     }
 
-	location /kapouet
+	location /ka
 	{
-		return /www/subdir;
+		return /subdir;
 	}
 
 	 allowed_Methods3 GET DELETE POST;
