implemented helper functions for Ranjas CGI in ResponseMessage

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -11,7 +11,15 @@ server
 	allowed_Methods GET DELETE POST;
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	root /www;
+	cgi_ext .sh .py;
 	
+	location /cgi-bin 
+	{
+        allow_methods GET POST;
+        index first_cgi.py;
+        cgi_path /bin/bash /usr/bin/python3;
+        cgi_ext .sh .py;
+    }
 
 	location  /one 
 	{
