refactored ResponseMessage, throw status Codes and use the appropriate html document

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -22,7 +22,7 @@ server
 
 	location  /one 
 	{
-		allowed_Methods GET;
+		allowed_Methods GET POST DELETE;
 		return /subdir;
     }
 	location /subdir
