updated createResponse (status-code) for lukas in ResponseMessage

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -12,6 +12,11 @@ server
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	root /www;
 	
+	location /
+	{
+		allowed_Methods POST;
+	}
+
 	location /cgi-bin 
 	{
         allow_methods GET POST;
