default conf modified with error pages locations

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -10,7 +10,15 @@ server
     listen 8000;
 	allowed_Methods GET DELETE POST;
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
-	root /www;
+	
+	error301	error/error301.html;
+	error400	error/error400.html;
+	error404	error/error404.html;
+	error405	error/error405.html;
+	error413	error/error413.html;
+	error414	error/error414.html;
+	error500	error/error500.html;
+	error505	error/error505.html;
 	
 	location /
 	{
