added server number check in response message

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -20,10 +20,10 @@ server
 	error500	error/error500.html;
 	error505	error/error505.html;
 	
-	location /
-	{
-		allowed_Methods POST;
-	}
+	#location /
+	#{
+	#	allowed_Methods POST;
+	#}
 
 	location /cgi-bin 
 	{
