delete implemented in response message, deletes a file

--- a/simplified-serv/Makefile
+++ b/simplified-serv/Makefile
@@ -51,6 +51,7 @@ $(NAME): $(OBJECTS)
 # 	@$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
 	@$(CC) $(CFLAGS) $(OBJ) -o $@ $^
 	@echo "$(GREEN)Finished [$(NAME)]$(RESET)"
+	@echo "please delete me" > www/delete_dir/delete_me.txt
 
 
 ### Compile Objects ###
