--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -25,6 +25,11 @@ server
 	#	allowed_Methods POST;
 	#}
 
+	location /delete_dir
+	{
+		allow_methods DELETE;
+	}
+
 	location /cgi-bin 
 	{
         allow_methods GET POST;
