dir listing integrated into ResponseMessage

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -1,6 +1,5 @@
 ! webserve config file !
 
-index		index.htm index.html;
 error404	error.html;
 root /www;
 
@@ -10,9 +9,11 @@ server
     listen 8000;
 	allowed_Methods GET DELETE POST;
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
-	
+	autoindex off;
+
 	error301	error/error301.html;
 	error400	error/error400.html;
+	error403	error/error403.html;
 	error404	error/error404.html;
 	error405	error/error405.html;
 	error413	error/error413.html;
@@ -20,15 +21,20 @@ server
 	error500	error/error500.html;
 	error505	error/error505.html;
 	
-	#location /
-	#{
-	#	allowed_Methods POST;
-	#}
+	location /
+	{
+		allowed_Methods GET POST;
+	}
 
 	location /delete_dir
 	{
 		allow_methods DELETE;
 	}
+
+	location /dir_listing
+	{
+		autoindex on;
+	} 
 
 	location /cgi-bin 
 	{
