directory listing size corrected

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -31,9 +31,16 @@ server
 		allow_methods DELETE;
 	}
 
+	location /static_website
+	{
+		allow_methods GET;
+		index static.html;
+	}
+
 	location /dir_listing
 	{
 		autoindex on;
+		#return /static_website; # weg für die eval
 	} 
 
 	location /cgi-bin 
