--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -10,6 +10,7 @@ server
 	allowed_Methods GET DELETE POST;
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	autoindex off;
+	host example.com;
 
 	error301	error/error301.html;
 	error400	error/error400.html;
