makes tmp directory, if not there

--- a/simplified-serv/Makefile
+++ b/simplified-serv/Makefile
@@ -52,6 +52,7 @@ $(NAME): $(OBJECTS)
 	@$(CC) $(CFLAGS) $(OBJ) -o $@ $^
 	@echo "$(GREEN)Finished [$(NAME)]$(RESET)"
 	@echo "please delete me" > www/delete_dir/delete_me.txt
+	@mkdir -p tmp
 
 
 ### Compile Objects ###
