--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -6,11 +6,13 @@ root /www;
 
 server
 {
-    listen 8000;
+    listen 8000 8080 8010;
 	allowed_Methods GET DELETE POST;
 	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	autoindex off;
 	host example.com;
+	max_body_size 500;
+	timeout 10;
 
 	error301	error/error301.html;
 	error400	error/error400.html;
@@ -25,6 +27,7 @@ server
 	location /
 	{
 		allowed_Methods GET POST;
+		index index.html;
 	}
 
 	location /delete_dir
@@ -83,7 +86,7 @@ server
 
 server
 {
-    listen	80 ;
+    listen	8090 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
     root3         html;
