--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -90,6 +90,7 @@ server
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
     root3         html;
+	autoindex off;
 	   
 	location ~/
 	{
