for max dir_things

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -90,8 +90,10 @@ server
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
     root3         html;
-	autoindex off;
-	   
+	autoindex on;
+
+	root www/;
+   
 	location ~/
 	{
       root4    	/var/www/virtual/big.server.com/htdocs;
