modified min max value checking

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -3,7 +3,7 @@
 # Possible Parameter
 #server
 #	listen #(ports to listen)	1025 - 65535	(min 1 Value)
-#	timeout #(in seconds)		1 - 1000000		(default 60s)
+#	timeout #(in seconds)		1 - 200			(default 60s)
 #	max_body_size #(in Bytes) 	0 - 400 MB		(default 5MB)
 
  
