allowed methods only these three in config

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -1,22 +1,33 @@
 ! webserve config file !
 
-# Possible Parameter
+# Possible Parameters
+#	(return not allowed in common config )
+#	autoindex		( on off )
+#	index 			( an index file )
+#
 #server
-#	listen #(ports to listen)	1025 - 65535	(min 1 Value)
+#	listen #(ports to listen)	1025 - 65535	(min 1 to 5 Values)
 #	timeout #(in seconds)		1 - 200			(default 60s)
 #	max_body_size #(in Bytes) 	0 - 400 MB		(default 5MB)
+#	(return not allowed in server directive)
+#	autoindex			( on off )
+#	index 				(an index file)
+#
+#  location <location>
+#		allow_methods		( GET POST DELETE )
+#		return				( directory to return )
+#		autoindex			( on off )
+#		index 				( an index file )
+#		cgi_path 			( cgi path )
+#		cgi_ext 			( cgi file extention )
 
- 
-
-error404	error.html;
 root /www;
-
 
 server
 {
     listen 8000 8080 8010;
 	allowed_Methods GET DELETE POST;
-	return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
+	#return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	autoindex off;
 	host example.com;
 	max_body_size 500;
@@ -59,8 +70,8 @@ server
 	{
         allow_methods GET POST;
         index first_cgi.py;
-        cgi_path /bin/bash /usr/bin/python3;
-        cgi_ext .sh .py;
+        cgi_path /usr/bin/python3;
+        cgi_ext .py;
     }
 
 	location  /one 
@@ -97,14 +108,14 @@ server
     listen	8090 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
-    root3         html;
+    root     sdh    html;
 	autoindex on;
 
 	root www/;
    
 	location ~/
 	{
-      root4    	/var/www/virtual/big.server.com/htdocs;
+      root    	/var/www/virtual/big.server.com/htdocs;
       expires 	30d;
     }
 
@@ -115,5 +126,5 @@ server
  }
  
 allowed_Methods GET DELETE;
-listen;
+#listen 0394598374;
 
