1 error from valgrind solved - open file in Config

--- a/simplified-serv/Makefile
+++ b/simplified-serv/Makefile
@@ -82,7 +82,7 @@ fclean: clean
 	fi;
 
 e:	$(NAME)
-	./$(NAME) conf/webserve_.conf
+	./$(NAME) conf/webserve.conf
 
 ### re Rule ###
 re: fclean all
