--- a/simplified-serv/conf/webserve.conf
+++ b/simplified-serv/conf/webserve.conf
@@ -1,50 +1,121 @@
 ! webserve config file !
 
-allowed_Methods GET POST DELETE;
-listen 49;
-root1		 htm;
-root2		 htm_;
-root4 du;
+# Possible Parameters
+#	(return not allowed in common config )
+#	autoindex		( on off )
+#	index 			( an index file )
+#
+#server
+#	listen #(ports to listen)	1025 - 65535	(min 1 to 5 Values)
+#	timeout #(in seconds)		1 - 200			(default 60s)
+#	max_body_size #(in Bytes) 	0 - 400 MB		(default 5MB)
+#	(return not allowed in server directive)
+#	autoindex			( on off )
+#	index 				(an index file)
+#
+#  location <location>
+#		allow_methods		( GET POST DELETE )
+#		return				( directory to return )
+#		autoindex			( on off )
+#		index 				( an index file )
+#		cgi_path 			( cgi path )
+#		cgi_ext 			( cgi file extention )
 
+root /www;
 
 server
 {
-    listen	8800;
-    server_name1 	domain1.com www.domain1.com;
-	access_log1		logs/domain1.access.log  main jksdhf;
-	allowed_Methods  POST GET;
-	index		index.htm index.html;
-	error404	error.html;
+    listen 8000 8080 8010;
+	allowed_Methods GET DELETE POST;
+	#return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
+	autoindex off;
+	host example.com;
+	max_body_size 500;
+	timeout 10;
 
-	#root4 max
-
-	location  /subdi {
-      root3    	/var/www/virtual/big.server.com/htdocs df dfigj sdlkfj;
-      expires 	30d 20d 40;
-	  listen 39;
-    }
-	location lj/ 
-	{
-    	Name      Max;
-    }
+	error301	error/error301.html;
+	error400	error/error400.html;
+	error403	error/error403.html;
+	error404	error/error404.html;
+	error405	error/error405.html;
+	error413	error/error413.html;
+	error414	error/error414.html;
+	error500	error/error500.html;
+	error505	error/error505.html;
+	
 	location /
+	{
+		allowed_Methods GET POST;
+		index index.html;
+	}
+
+	location /delete_dir
+	{
+		allow_methods DELETE;
+	}
+
+	location /static_website
+	{
+		allow_methods GET;
+		index static.html;
+	}
+
+	location /dir_listing
+	{
+		autoindex on;
+		#return /static_website; # weg für die eval
+	} 
+
+	location /cgi-bin 
+	{
+        allow_methods GET POST;
+        index first_cgi.py;
+        cgi_path /usr/bin/python3;
+        cgi_ext .py;
+    }
+
+	location  /one 
+	{
+		allowed_Methods GET POST DELETE;
+		return /subdir;
+    }
+	location /subdir
+	{
+		return /;
+	}
+	
+	allowed_Methods2 GET DELETE POST;
+
+    location /zu
 	{
     	proxy_pass      http://127.0.0.1:8080;
 		server_name2  	domain1.com www.domain1.com;
-    	root   	www;
+    	root   	/www;
+		error404 error/error.html;
+		index sub/hallo.html;
     }
+
+	location /ka
+	{
+		return /subdir;
+	}
+
+	 allowed_Methods3 GET DELETE POST;
 }
 
 server
 {
-    listen	80 ;
+    listen	8090 ;
     server_name3  domain1.com www.domain1.com;
     access_log3   logs/domain1.access.log  main;
-    #root4         html_max;
-	   
+    root     sdh    html;
+	autoindex on;
+
+	root www/;
+   
 	location ~/
 	{
-      root3    	/var/www/virtual/big.server.com/htdocs do dkfjhg skdfhgkjshdf kg sdkfjhg;
+      root    	/var/www/virtual/big.server.com/htdocs;
       expires 	30d;
     }
 
@@ -52,6 +123,8 @@ server
 	{
       proxy_pass      http://127.0.0.1:8080;
     }
-	listen: 93847h;
  }
+ 
+allowed_Methods GET DELETE;
+#listen 0394598374;
 
