error 408 added as html file

--- a/simplified-serv/conf/web.conf
+++ b/simplified-serv/conf/web.conf
@@ -25,7 +25,7 @@ root /www;
 
 server
 {
-    listen 8000 8080 8010;
+    listen 8000;
 	allowed_Methods GET DELETE POST;
 	#return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	autoindex off;
@@ -38,7 +38,6 @@ server
 	error403	error/error403.html;
 	error404	error/error404.html;
 	error405	error/error405.html;
-	error408	error/error408.html;
 	error413	error/error413.html;
 	error414	error/error414.html;
 	error500	error/error500.html;
@@ -106,10 +105,8 @@ server
 
 server
 {
-    listen	8090 ;
-    server_name3  domain1.com www.domain1.com;
-    access_log3   logs/domain1.access.log  main;
-    root     sdh    html;
+    listen	8090 8091 ;
+    host another_example.com;
 	autoindex on;
 
 	root www/;
