--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -31,7 +31,7 @@ server
 	#return /nichtgut; # will do nothing here, otherwise it would allways return / for every request, coded in std::string	Config::get( size_t server, std::string location, std::string parameter, size_t n )
 	autoindex off;
 	host example.com;
-	max_body_size 500;
+	max_body_size 5000000;
 	timeout 10;
 
 	error301	error/error301.html;
@@ -49,6 +49,7 @@ server
 	{
 		allowed_Methods GET POST;
 		index index.html;
+		#autoindex on;
 	}
 
 	location /delete_dir
