--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -68,7 +68,7 @@ server
 		#return /static_website; # weg für die eval
 	} 
 
-	location /cgi-bin 
+	location /cgi-bin
 	{
         allow_methods GET POST;
         index first_cgi.py;
@@ -87,5 +87,5 @@ server
     listen	8090 ;
 	autoindex on;
 	root www/;
- }
-
+	location /sdj{}
+}
