default-config-new-line

--- a/simplified-serv/conf/default.conf
+++ b/simplified-serv/conf/default.conf
@@ -43,6 +43,7 @@ server
 	error414	error/error414.html;
 	error500	error/error500.html;
 	error505	error/error505.html;
+	#error404    error/error500.html;
 	
 	location /
 	{
